--- a/templates/forum/new_forum.html
+++ b/templates/forum/new_forum.html
@@ -57,11 +57,16 @@
 </nav>
 
 <div class="container mt-5">
-    <div class="row">
-        <div class="input-group">
-            <input type="text" name="title" id="title" class="form-control" placeholder="Title">
-        </div>
+    <div class="form-group">
+        <label for="title">title:</label>
+        <input type="title" class="form-control" id="title">
     </div>
+    <hr>
+    <div class="form-group">
+        <label for="comment">describtion:</label>
+        <textarea class="form-control" rows="5" id="desc"></textarea>
+    </div>
+    <hr>
     <div class="row">
         <button class="btn btn-primary">Post</button>
     </div>
