Add some changes from Juno on html and change time on update price script

--- a/templates/bithumb/index.html
+++ b/templates/bithumb/index.html
@@ -115,23 +115,32 @@
                 <img src="{% static "img/logo.png" %}" alt="LOGO" style ="width:auto; height: 100px;">
             </div>
         </div>
-        <div class="row d-flex justify-content-center align-items-center mb-3">
-            <h5>Score: </h5>
-        </div>
-        <div class="row d-flex justify-content-center align-items-center mb-3">
-            <h5>Bitcoin Rate(USD):</h5>
-        </div>
+        <!--d-flex justify-content-center align-items-center -->
     </div>
+    <div class="container d-flex justify-content-center align-items-center mt-5">
         <div class="row">
-            <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
-                <div class="card mt-3" style="width: 320px; height: 480px;">
-                    <div class="card-body p-3">
-                        <!-- HTML 5 Canvas Here -->
-                    </div>
-                </div>
+            <div class="card mt-3" style="width: 320px">
+                <h7>Score: 0 </h7>
+            </div>
+        </div>
+        <div class="row">
+            <div class="card mt-3" style="width:320px">
+                <h7>Bitcoin Rate(USD): $10,000 / bitcoin </h7>
             </div>
         </div>
     </div>
+    Im going to align later
+    <div class="row">
+        <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
+            <div class="card mt-3" style="width: 320px; height: 480px;">
+                <!--Before Loggin in-->
+                <iframe frameborder="0" width="320" height="480" src="https://biteable.com/watch/embed/pipeline-1806446" allowfullscreen="false" autoplay="1"></iframe>
+                <!-- After Logging in -->
+
+            </div>
+        </div>
+    </div>
+
 <!-- Footer -->
 <div class="footer mt-4 py-4" style="background:#dae0e5; height: 200px; color: #000000;">
     <div class="container">
