--- a/templates/invest/itemshop.html
+++ b/templates/invest/itemshop.html
@@ -107,20 +107,25 @@
     <div class="row">
         <div class="col-lg-12">
             <h3>Item Shop</h3>
-            <div class="card mt-3" style="width: 100%; height: 30vh; overflow-x: scroll">
+            <div class="card mt-3" style="width: 110%; height: 30vh; overflow-x: scroll">
                 <div class="card-body p-3 row">
                     {% for trophy in trophies %}
                     <div class="col-lg-3">
                         {{ trophy.name }}
                         <div class="card" style="width: 100%; height: 100%;">
                             <div class="card-body p-3">
-                                {{ trophy.image }}
-                                {% thumbnail trophy.image 100x100 crop as thumb %}
+                                {% thumbnail trophy.image 200x200 crop as thumb %}
                                 <img src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" alt="{{ trophy.name }}"/>
                             </div>
                         </div>
                         USD: {{ trophy.price }}
-                        <button class="btn btn-dark float-right mt-3">Buy</button>
+                        {% if request.user.is_authenticated %}
+                            {% if trophy in owned %}
+                                <div class="float-right mt-3">You own this trophy!</div>
+                            {% else %}
+                                <button class="btn btn-dark float-right mt-3">Buy</button>
+                            {% endif %}
+                        {% endif %}
                     </div>
                     {% endfor %}
                 </div>
