--- a/templates/invest/itemshop.html
+++ b/templates/invest/itemshop.html
@@ -107,6 +107,10 @@
     <div class="row">
         <div class="col-lg-12">
             <h3>Item Shop</h3>
+            <div>USD balance: {{ balance }}</div>
+            {% for error in messages %}
+            <div>{{ error }}</div>
+            {% endfor %}
             <div class="card mt-3" style="width: 110%; height: 30vh; overflow-x: scroll">
                 <div class="card-body p-3 row">
                     {% for trophy in trophies %}
@@ -122,8 +126,14 @@
                         {% if request.user.is_authenticated %}
                             {% if trophy in owned %}
                                 <div class="float-right mt-3">You own this trophy!</div>
+                            {% elif trophy.price <= balance %}
+                                <form method="POST" action="{% url 'invest:itemshop' %}">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="trophy" value="{{ trophy.pk }}">
+                                    <button type="submit" class="btn btn-dark float-right mt-3">Buy</button>
+                                </form>
                             {% else %}
-                                <button class="btn btn-dark float-right mt-3">Buy</button>
+                                <div class="float-right mt-3">You don't have enough to buy this item yet.</div>
                             {% endif %}
                         {% endif %}
                     </div>
