--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -8,6 +8,7 @@
     <title>Bithumb</title>
 
     {% load static %}
+    {% load thumbnail %}
 
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <script src="{% static "js/bootstrap.min.js" %}"></script>
@@ -73,47 +74,28 @@
     </div>
     </div>
     <div class="row">
+        <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
+        </div>
+    </div>
+    <div class="row">
         <div class="col-lg-12">
-        <h3>Owned Thropies</h3>
-    </div>
-    <div class="col-lg-12">
-        <div class="card mt-3" style="width: 100%; height: 30vh; overflow-x: scroll">
-        <div class="card-body p-3 row">
-        <div class="col-lg-3">
-        <div class="card" style="width: 100%; height: 100%;">
-        <div class="card-body p-3">
-        <!-- HTML 5 Canvas Here -->
-        Juno Shin
-    </div>
-    </div>
-    </div>
-    <div class="col-lg-3">
-        <div class="card" style="width: 100%; height: 100%;">
-        <div class="card-body p-3">
-        <!-- HTML 5 Canvas Here -->
-        Juno Shin
-    </div>
-    </div>
-    </div>
-    <div class="col-lg-3">
-        <div class="card" style="width: 100%; height: 100%;">
-        <div class="card-body p-3">
-        <!-- HTML 5 Canvas Here -->
-        Juno Shin
-    </div>
-    </div>
-    </div>
-    <div class="col-lg-3">
-        <div class="card" style="width: 100%; height: 100%;">
-        <div class="card-body p-3">
-        <!-- HTML 5 Canvas Here -->
-        Juno Shin
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
+            <div class="card mt-3" style="width: 110%; height: 30vh; overflow-x: scroll">
+                <div class="card-body p-3 row">
+                    {% for trophy in collectibles %}
+                    <div class="col-lg-3">
+                        {{ trophy.name }}
+                        <div class="card" style="width: 100%; height: 100%;">
+                            <div class="card-body p-3">
+                                {% thumbnail trophy.image 200x200 crop as thumb %}
+                                <img src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" alt="{{ trophy.name }}"/>
+                            </div>
+                        </div>
+                        USD: {{ trophy.price }}
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
     </div>
 
     </div>
