Small change to viewing profile trophies

--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -79,6 +79,7 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
+            <h3>Owned Trophies</h3>
             <div class="card mt-3" style="width: 110%; height: 30vh; overflow-x: scroll">
                 <div class="card-body p-3 row">
                     {% for trophy in collectibles %}
