--- a/templates/bithumb/index.html
+++ b/templates/bithumb/index.html
@@ -112,25 +112,22 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
-                <img src="{% static "img/logo.png" %}" alt="LOGO" style ="width:auto; height: 100px;">
+                <img src="{% static 'img/logo.png' %}" style="width:640px;height:100px">
             </div>
         </div>
-        <div class="row d-flex justify-content-center align-items-center mb-3">
-            <h5>Score: </h5>
+        {% if request.user.is_authenticated%}
+        <div class="row">
+            <h4>Total Score (USD): <span id="total_score">{{ total_score }}</span></h4>
         </div>
-        <div class="row d-flex justify-content-center align-items-center mb-3">
-            <h5>Bitcoin Rate(USD):</h5>
-        </div>
-    </div>
         <div class="row">
             <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
-                <div class="card mt-3" style="width: 320px; height: 480px;">
-                    <div class="card-body p-3">
-                        <!-- HTML 5 Canvas Here -->
-                    </div>
-                </div>
+                <iframe src ="{% url 'game:game' %}" style="width: 320px; height:480px"></iframe>
             </div>
         </div>
+        {% else %}
+        Add Juno's changes here<br />
+        {% endif %}
+    </div>
     </div>
 <!-- Footer -->
 <div class="footer mt-4 py-4" style="background:#dae0e5; height: 200px; color: #000000;">
