--- a/templates/forum/all_forums.html
+++ b/templates/forum/all_forums.html
@@ -77,7 +77,7 @@
                 <tbody>
                 <tr>
                     <td>{{ forum.time }}</td>
-                    <td>{{ forum.poster }}</td>
+                    <td><a href="{% url 'account:profile' user_id=forum.poster_id %}">{{ forum.poster }}</a></td>
                     <td><a href="{% url 'forum:forum' forum_id=forum.pk %}">{{ forum.title }}</a></td>
                     <td>
                         <a href="{% url 'forum:forum' forum_id=forum.pk %}"><button class="btn btn-primary"><i class="fas fa-reply"></i></button></a>
