--- a/templates/forum/new_forum.html
+++ b/templates/forum/new_forum.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bithumb</title>
 
+    {% load static %}
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <script src="{% static "js/bootstrap.min.js" %}"></script>
 
