Add some Juno html changes

--- a/templates/game/scoreboard.html
+++ b/templates/game/scoreboard.html
@@ -86,16 +86,22 @@
 </div>
 
     </div>
-    <!-- Footer -->
-    <div class="footer mt-4 py-4" style="background:#232323; height: 300px; color: #fff;">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <h3>Random shit juno wants</h3>
-                </div>
-            </div>
-        </div>
-    </div>
+
+<!-- Footer -->
+<div class="footer mt-4 py-4" style="background:#dae0e5; height: 200px; color: #000000;">
+	<div class="container">
+		<div class="row">
+			<h3>University of Regina</h3>
+		</div>
+		<div class="row">
+			<h5>Computer Science Dept.</h5>
+		</div>
+		<div class="row">
+			<h7> CS476 Group Proj. by C. Myers & J. Shin</h7>
+		</div>
+	</div>
+</div>
+
 </body>
 <script>
     function changePay(e) {
