--- a/templates/invest/invest.html
+++ b/templates/invest/invest.html
@@ -82,12 +82,12 @@
                 </div>
             </div>
         <div class="row">
-            <div class="col-lg-12">
-                <div class="card mt-3" style="width: 100%; height: auto;">
+            <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
+                <div class="card mt-3" style="width: 700px; height: auto;">
                     <div class="card-body p-3">
                         {#  % thumbnail category.image 370x280 crop as thumb %  #}
                         <!--img src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" alt="hey"/-->
-                        <img src="{% static 'img/weekly_prices.png' %}" style="width: 100%">
+                        <img src="{% static 'img/weekly_prices.png' %}" style="width: 640px; height: 480px">
                     </div>
                 </div>
             </div>
