--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -80,15 +80,15 @@
     <div class="row">
         <div class="col-lg-12">
             <h3>Owned Trophies</h3>
-            <div class="card mt-3" style="width: 110%; height: 30vh; overflow-x: scroll">
+            <div class="card mt-3" style="width: auto; height: auto;">
                 <div class="card-body p-3 row">
                     {% for trophy in collectibles %}
                     <div class="col-lg-3">
                         {{ trophy.name }}
-                        <div class="card" style="width: 100%; height: 100%;">
+                        <div class="card" style="width: 100px; height: auto;">
                             <div class="card-body p-3">
                                 {% thumbnail trophy.image 200x200 crop as thumb %}
-                                <img src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" alt="{{ trophy.name }}"/>
+                                <img src="{{ thumb.url }}" width="60px" height="60px" alt="{{ trophy.name }}"/>
                             </div>
                         </div>
                         USD: {{ trophy.price }}
