--- a/templates/invest/itemshop.html
+++ b/templates/invest/itemshop.html
@@ -70,15 +70,15 @@
             {% for error in messages %}
             <div>{{ error }}</div>
             {% endfor %}
-            <div class="card mt-3" style="width: 110%; height: 30vh; overflow-x: scroll">
+            <div class="card mt-3" style="width: auto; height: auto;">
                 <div class="card-body p-3 row">
                     {% for trophy in trophies %}
                     <div class="col-lg-3">
                         {{ trophy.name }}
-                        <div class="card" style="width: 100%; height: 100%;">
+                        <div class="card" style="width: auto; height: auto;">
                             <div class="card-body p-3">
                                 {% thumbnail trophy.image 200x200 crop as thumb %}
-                                <img src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" alt="{{ trophy.name }}"/>
+                                <img src="{{ thumb.url }}" width="60px" height="60px" alt="{{ trophy.name }}"/>
                             </div>
                         </div>
                         USD: {{ trophy.price }}
@@ -103,6 +103,15 @@
     </div>
 
 </div>
+&nbsp
+&nbsp
+&nbsp
+&nbsp
+&nbsp
+&nbsp
+&nbsp
+
+
 <!-- Footer -->
 <div class="footer mt-4 py-4" style="background:#dae0e5; height: 200px; color: #000000;">
     <div class="container">
