Add some of Juno's html changes

--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -70,7 +70,7 @@
         <p>Username : {{ user.username }}</p>
     <p>All-time highscore : {{ user.highscore }}</p>
     <p>Bitcoin : {{ user.bank_account.bitcoins }}</p>
-    <p>CAD $ : {{ user.bank_account.in_game_currency }}</p>
+    <p>USD $ : {{ user.bank_account.in_game_currency }}</p>
     </div>
     </div>
     <div class="row">
@@ -99,6 +99,9 @@
         </div>
     </div>
 
+</div>
+    <div class="row" style="width:10px; height:60px">
+        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAATYAAACiCAMAAAD84hF6AAAAA1BMVEX///+nxBvIAAAASElEQVR4nO3BMQEAAADCoPVPbQlPoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAICPAcTOAAHWaoZdAAAAAElFTkSuQmCC">
     </div>
     <!-- Footer -->
     <div class="footer mt-4 py-4" style="background:#dae0e5; height: 200px; color: #000000;">
