--- a/templates/bithumb/about_us.html
+++ b/templates/bithumb/about_us.html
@@ -74,6 +74,88 @@
         </div>
     </div>
 </div>
+
+<div class="container">
+    &nbsp
+    <div class="row">
+        <h3>Special Thanks to...</h3>
+    </div>
+    <div class="row">
+        &nbsp
+    </div>
+    <div class="row">
+        &nbsp
+    </div>
+    <div class="row">
+        <div class="col">
+            <img src="https://assetsv2.fiverrcdn.com/assets/v2_globals/fiverr-logo-green-42ceb28536932bff125c8d478bec1c56.svg" style="width:100px; height:100px">
+        </div>
+        <div class="col">
+            <img src="https://digitalstory.tools/wp-content/uploads/sites/2/2016/10/Schermafbeelding-2016-10-05-om-12.57.44.png" style="width:150px; height:100px">
+        </div>
+        <div class="col">
+            <img src="https://matplotlib.org/_static/logo2.png" style="width:150px; height:100px">
+        </div>
+    </div>
+    <div class="row">
+        &nbsp
+    </div>
+    <div class="row">
+        <div class="col">
+            <img src="https://pbs.twimg.com/profile_images/972154872261853184/RnOg6UyU_400x400.jpg" style="width:100px; height:100px">
+        </div>
+        <div class="col">
+            <img src="https://assets-cdn.github.com/images/modules/open_graph/github-mark.png" style="width:150px; height:100px">
+        </div>
+        <div class="col">
+            <img src="https://bitcoin.org/img/icons/opengraph.png" style="width:100px; height:100px">
+        </div>
+    </div>
+    <div class="row">
+        &nbsp
+    </div>
+    <div class="row">
+        <div class="col">
+            <img src="https://getbootstrap.com/assets/img/bootstrap-stack.png" style="width:100px; height:100px">
+        </div>
+        <div class="col">
+            <img src="https://d1eq8vvyuam4eq.cloudfront.net/css_logo.svg" style="width:100px; height:100px">
+        </div>
+        <div class="col">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1200px-HTML5_logo_and_wordmark.svg.png" style="width:100px; height:100px">
+        </div>
+    </div>
+    <div class="row">
+        &nbsp
+    </div>
+    <div class="row">
+        <div class="col">
+            <img src="https://www.javatpoint.com/images/javascript/javascript_logo.png" style="width:100px; height:100px">
+        </div>
+        <div class="col">
+            <img src="https://iotcube.korea.ac.kr/assets/images/index.png" style="width:150px; height:100px">
+        </div>
+        <div class="col">
+            <img src="https://tools.pingdom.com/fpt/_img/share-logo.png" style="width:100px; height:100px">
+        </div>
+    </div>
+    <div class="row">
+        &nbsp
+    </div>
+    <div class="row">
+        <div class="col">
+            <img src="http://www.techspire.net/wp-content/uploads/2016/11/python-django-logo.jpg" style="width:100px; height:100px">
+        </div>
+        <div class="col">
+            <img src="https://www.scirra.com/images/c3logo-lightbg.svg" style="width:100px; height:100px">
+        </div>
+        <div class="col">
+            <img src="https://vignette.wikia.nocookie.net/trollpasta/images/d/da/BLANK.png/revision/latest?cb=20111224232108" style="width:100px; height:100px">
+        </div>
+    </div>
+
+</div>
+
 <div class="footer mt-4 py-4" style="background:#dae0e5; height: 200px; color: #000000;">
     <div class="container">
         <div class="row">
